tests/miniJava/neg/006182_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { this if ( 0 ) { } else { } } }
